--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "express-myconnection": "^1.0.4",
     "express-session": "^1.17.0",
     "md5": "^2.2.1",
-    "mercadopago": "^1.3.1",
+    "mercadoPago": "^1.3.1",
     "morgan": "^1.9.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2",
-    "path": "^0.12.7"
+    "PATH": "^0.12.7"
   },
   "devDependencies": {},
   "repository": {
