--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js >> src/app.log",
+    "apacheStart": "sudo /./opt/lampp/manager-linux-x64.run"
   },
   "keywords": [
     "node",
@@ -16,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "D": "^1.0.0",
+    "PATH": "^0.12.7",
     "body-parser": "^1.19.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
@@ -23,11 +25,10 @@
     "express-myconnection": "^1.0.4",
     "express-session": "^1.17.0",
     "md5": "^2.2.1",
-    "mercadoPago": "^1.3.1",
+    "mercadopago": "^1.3.2",
     "morgan": "^1.9.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.2",
-    "PATH": "^0.12.7"
+    "nodemon": "^2.0.2"
   },
   "devDependencies": {},
   "repository": {
@@ -37,5 +38,8 @@
   "bugs": {
     "url": "https://gitlab.com/franco.ojeda/e-comerce/issues"
   },
-  "homepage": "https://gitlab.com/franco.ojeda/e-comerce#readme"
+  "homepage": "https://gitlab.com/franco.ojeda/e-comerce#readme",
+  "directories": {
+    "doc": "docs"
+  }
 }
